# MDC

./: CMakeLists.txt  CMakeLists.txt.bak  MDC.sln  MDC.vcxproj  MDC.vcxproj.filters  hook_pthread_create.cpp  hook_pthread_create.h  main.cpp  main.cpp.bak  mdc.cpp  mdc.cpp.bak  mdc.h  mdc.h.bak
x64/Debug/: vc143.idb
x64/Debug/MDC.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MDC.lastbuildstate
